SWAGGER for get users api
